--- a/.github/workflows/tf_fmt.yml
+++ b/.github/workflows/tf_fmt.yml
@@ -8,10 +8,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        name: Setup Terraform
-      - uses: hashicorp/setup-terraform@v1
-        name: Terraform Initialize
-      - run: terraform init
-        name: Terraform Format
-      - run: terraform fmt -recursive
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+
+      - name: Terraform Initialize
+        run: terraform init
+        working-directory: ./src/terraform
+
+      - name: Terraform Format
+        run: terraform fmt -recursive
+        working-directory: ./src/terraform
